--- a/css/common.css
+++ b/css/common.css
@@ -265,5 +265,18 @@ input[type="checkbox"] + label > div > i {
     font-weight: 500;
 }
 
+button {
+    cursor: pointer;
+}
+
+
+button.btn {
+    width: 100%; height: 45px;
+    background-color: #FE354D;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 700;
+    border-radius: 5px;
+
 
 
