--- a/css/common.css
+++ b/css/common.css
@@ -7,11 +7,11 @@
     font-family: 'AppleSDGothicNeo';
     font-weight: 100;
     font-style: normal;
-    src: url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoT.eot') format('eot'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoT.eot?#iefix') format('embedded-opentype'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoT.woff2') format('woff2'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoT.woff') format('woff'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoT.otf') format('opentype');
+    src: url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoT.eot') format('eot'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoT.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoT.woff2') format('woff2'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoT.woff') format('woff'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoT.otf') format('opentype');
 }
 
 
@@ -19,11 +19,11 @@
     font-family: 'AppleSDGothicNeo';
     font-weight: 200;
     font-style: normal;
-    src: url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoUL.eot') format('eot'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoUL.eot?#iefix') format('embedded-opentype'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoUL.woff2') format('woff2'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoUL.woff') format('woff'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoUL.otf') format('opentype');
+    src: url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoUL.eot') format('eot'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoUL.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoUL.woff2') format('woff2'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoUL.woff') format('woff'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoUL.otf') format('opentype');
 }
 
 
@@ -31,11 +31,11 @@
     font-family: 'AppleSDGothicNeo';
     font-weight: 300;
     font-style: normal;
-    src: url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoL.eot') format('eot'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoL.eot?#iefix') format('embedded-opentype'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoL.woff2') format('woff2'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoL.woff') format('woff'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoL.otf') format('opentype');
+    src: url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoL.eot') format('eot'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoL.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoL.woff2') format('woff2'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoL.woff') format('woff'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoL.otf') format('opentype');
 }
 
 
@@ -43,11 +43,11 @@
     font-family: 'AppleSDGothicNeo';
     font-weight: 400;
     font-style: normal;
-    src: url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoR.eot') format('eot'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoR.eot?#iefix') format('embedded-opentype'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoR.woff2') format('woff2'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoR.woff') format('woff'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoR.otf') format('opentype');
+    src: url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoR.eot') format('eot'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoR.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoR.woff2') format('woff2'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoR.woff') format('woff'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoR.otf') format('opentype');
 }
 
 
@@ -55,11 +55,11 @@
     font-family: 'AppleSDGothicNeo';
     font-weight: 500;
     font-style: normal;
-    src: url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoM.eot') format('eot'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoM.eot?#iefix') format('embedded-opentype'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoM.woff2') format('woff2'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoM.woff') format('woff'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoM.otf') format('opentype');
+    src: url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoM.eot') format('eot'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoM.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoM.woff2') format('woff2'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoM.woff') format('woff'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoM.otf') format('opentype');
 }
 
 
@@ -67,11 +67,11 @@
     font-family: 'AppleSDGothicNeo';
     font-weight: 600;
     font-style: normal;
-    src: url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoSB.eot') format('eot'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoSB.eot?#iefix') format('embedded-opentype'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoSB.woff2') format('woff2'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoSB.woff') format('woff'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoSB.otf') format('opentype');
+    src: url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoSB.eot') format('eot'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoSB.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoSB.woff2') format('woff2'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoSB.woff') format('woff'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoSB.otf') format('opentype');
 }
 
 
@@ -79,11 +79,11 @@
     font-family: 'AppleSDGothicNeo';
     font-weight: 700;
     font-style: Bold;
-    src: url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoB.eot') format('eot'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoB.eot?#iefix') format('embedded-opentype'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoB.woff2') format('woff2'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoB.woff') format('woff'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoB.otf') format('opentype');
+    src: url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoB.eot') format('eot'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoB.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoB.woff2') format('woff2'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoB.woff') format('woff'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoB.otf') format('opentype');
 }
 
 
@@ -91,11 +91,11 @@
     font-family: 'AppleSDGothicNeo';
     font-weight: 700;
     font-style: Bold;
-    src: url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoEB.eot') format('eot'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoEB.eot?#iefix') format('embedded-opentype'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoEB.woff2') format('woff2'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoEB.woff') format('woff'),
-         url('/fonts/AppleSDGothicNeo/AppleSDGothicNeoEB.otf') format('opentype');
+    src: url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoEB.eot') format('eot'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoEB.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoEB.woff2') format('woff2'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoEB.woff') format('woff'),
+         url('../fonts/AppleSDGothicNeo/AppleSDGothicNeoEB.otf') format('opentype');
 }
 
 
@@ -263,6 +263,20 @@ input[type="checkbox"] + label > div > i {
     color: #ffffff;
     font-size: 12px;
     font-weight: 500;
+}
+
+
+.default_type {
+	width: 100%; height: 47px;
+	border: 1px solid #cccccc;
+	font-size: 13px;
+	border-radius: 5px;
+	padding: 0.2rem 1rem 0.2rem 1rem;
+    box-sizing: border-box;
+}
+.default_type::placeholder {
+	font-size: 13px;
+	color: #cccccc;
 }
 
 button {
