--- a/css/style.css
+++ b/css/style.css
@@ -290,6 +290,7 @@ span.date {
 .main_tab_btn ul li span {
   font-size: 14px;
   margin-right: 6px;
+  line-height: initial;
 }
 .main_tab_btn ul li.on {
   border-color: #EB0D2F;
@@ -509,7 +510,7 @@ span.date {
 }
 .list_align_wrap p {
   font-size: 12px;
-  color: #313131;
+  color: #666666;
 }
 .list_align_wrap span {
   position: absolute;
@@ -517,7 +518,7 @@ span.date {
   right: 0;
   transform: translate(-50%, -50%);
   font-size: 12px;
-  color: #313131;
+  color: #666666;
 }
 
 .storelist_box {
@@ -607,14 +608,16 @@ span.date {
 }
 .detail_page_top span {
   font-size: 16px;
+  line-height: initial;
   font-weight: bold;
 }
 .detail_page_top > .story_tit p {
   font-size: 10px;
   text-align: center;
+  line-height: initial;
   color: #cccccc;
 }
-.detail_page_top .shopping_cart_btn {
+.detail_page_top .shopping_cart_btn, .detail_page_top .right_btn {
   position: absolute;
   top: 50%;
   right: 12px;
@@ -1478,7 +1481,7 @@ span.date {
 }
 .request_submit button {
   width: 100%;
-  height: 55px;
+  height: 45px;
   border-radius: 5px;
   background-color: #EB0D2F;
   color: #ffffff;
@@ -1699,7 +1702,7 @@ span.date {
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 85px;
+  height: 90px;
   background-color: #ffffff;
   border-top: 1px solid #F1F1F1;
   box-sizing: border-box;
@@ -1708,7 +1711,7 @@ span.date {
 }
 .product_purchase .like_btn {
   width: 40px;
-  height: 40px;
+  height: 45px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1939,7 +1942,7 @@ span.date {
 }
 .page_bottom_btn button {
   width: 100%;
-  height: 40px;
+  height: 45px;
   background-color: #EB0D2F;
   border-radius: 5px;
   color: #ffffff;
@@ -2282,8 +2285,29 @@ span.date {
   font-size: 0;
 }
 .login_wrap .other_login li {
-  display: inline-block;
+  vertical-align: top;
+  width: 48px;
+  height: 48px;
+  border-radius: 48px;
   margin: 0 3px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+.login_wrap .other_login li.kakao {
+  background-color: #FEDE00;
+}
+.login_wrap .other_login li.naver {
+  background-color: #01C73C;
+}
+.login_wrap .other_login li.google {
+  background-color: #F3F6F4;
+}
+.login_wrap .other_login li.google > span {
+  font-size: 28px;
+  line-height: initial;
+  color: #cccccc;
+  font-weight: 900;
 }
 
 .radio_btn_wrap {
@@ -2574,7 +2598,7 @@ span.date {
 }
 .join_step4 .btn_wrap button {
   width: 49%;
-  height: 35px;
+  height: 40px;
   line-height: 35px;
   display: flex;
   align-items: center;
@@ -2586,6 +2610,188 @@ span.date {
   background-color: #FE354D;
   color: #ffffff;
   font-weight: 700;
+}
+
+/* 채널 정보 css */
+.channel_info > div {
+  background-color: #ffffff;
+}
+.channel_info > .info {
+  position: relative;
+  padding-top: 60px;
+  padding-bottom: 20px;
+  margin-bottom: 10px;
+}
+.channel_info > .info .member_apply_btn {
+  position: absolute;
+  top: 60px;
+  right: 12px;
+  font-size: 12px;
+  color: #666666;
+  padding: 6px 15px;
+  border: 1px solid #e3e3e3;
+  border-radius: 5px;
+  line-height: initial;
+  box-sizing: border-box;
+}
+.channel_info > .info .profile_wrap {
+  width: 100%;
+  margin-top: 30px;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.channel_info > .info .profile_wrap .img {
+  position: relative;
+  width: 90px;
+}
+.channel_info > .info .profile_wrap .img .profile_img {
+  width: inherit;
+  height: 90px;
+  border-radius: 90px;
+  border: 1px solid #DDDDDD;
+}
+.channel_info > .info .profile_wrap .img .state {
+  position: absolute;
+  display: inline-block;
+  left: 50%;
+  bottom: -6px;
+  transform: translateX(-50%);
+  background-color: #EB0D2F;
+  color: #ffffff;
+  width: 44px;
+  height: 22px;
+  border-radius: 22px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px;
+}
+.channel_info > .info .profile_wrap p {
+  padding-top: 15px;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 5px;
+}
+.channel_info > .info .profile_wrap .level {
+  margin-bottom: 35px;
+}
+.channel_info > .info .profile_wrap .list_wrap {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.channel_info > .info .profile_wrap .list_wrap > div {
+  position: relative;
+  width: 25%;
+}
+.channel_info > .info .profile_wrap .list_wrap > div > a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+}
+.channel_info > .info .profile_wrap .list_wrap > div > a span {
+  margin-top: 10px;
+  font-size: 12px;
+}
+.channel_info > .info .profile_wrap .list_wrap > div::after {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  content: "";
+  width: 1px;
+  height: 13px;
+  background-color: #cccccc;
+}
+.channel_info > .info .profile_wrap .list_wrap > div:last-child::after {
+  display: none;
+}
+.channel_info > .detail_info {
+  background-color: transparent;
+}
+.channel_info > .detail_info .tab_btn_wrap {
+  background-color: #ffffff;
+}
+.channel_info > .detail_info .tab_btn_wrap ul li {
+  width: 25%;
+}
+.channel_info > .detail_info .tab_cnt_wrap {
+  /* 채널정보 css */
+}
+.channel_info > .detail_info .tab_cnt_wrap .tab_cnt_01 > div {
+  background-color: #ffffff;
+  margin-bottom: 10px;
+  padding: 15px 14px;
+  box-sizing: border-box;
+}
+.channel_info > .detail_info .tab_cnt_wrap .tab_cnt_01 > div > h5 {
+  font-size: 14px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+.channel_info > .detail_info .tab_cnt_wrap .tab_cnt_01 .channel_member {
+  margin-bottom: 0;
+  padding: 0;
+}
+.channel_info > .detail_info .tab_cnt_wrap .tab_cnt_01 .channel_member > h5 {
+  position: relative;
+  padding: 15px 14px;
+  margin-bottom: 0;
+  border-bottom: 1px solid #e3e3e3;
+}
+.channel_info > .detail_info .tab_cnt_wrap .tab_cnt_01 .channel_member > h5 span {
+  font-size: 12px;
+  font-weight: 400;
+  position: absolute;
+  right: 14px;
+  color: #666666;
+}
+.channel_info > .detail_info .tab_cnt_wrap .tab_cnt_01 .channel_member .list_wrap > .list {
+  position: relative;
+  height: 68px;
+  padding: 12px 0 12px 62px;
+  box-sizing: border-box;
+  border-bottom: 1px solid #e3e3e3;
+}
+.channel_info > .detail_info .tab_cnt_wrap .tab_cnt_01 .channel_member .list_wrap > .list .profile_img {
+  width: 44px;
+  height: 44px;
+  border-radius: 44px;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+}
+.channel_info > .detail_info .tab_cnt_wrap .tab_cnt_01 .channel_member .list_wrap > .list .content {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+.channel_info > .detail_info .tab_cnt_wrap .tab_cnt_01 .channel_member .list_wrap > .list .content > .text {
+  font-weight: 700;
+}
+.channel_info > .detail_info .tab_cnt_wrap .tab_cnt_01 .channel_member .list_wrap > .list .content .go_btn {
+  position: absolute;
+  top: 50%;
+  left: auto;
+  transform: translateY(-50%);
+  right: 0;
+  width: 26px;
+  height: 26px;
+  border-radius: 26px;
+  border: 1px solid #f1f1f1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /*# sourceMappingURL=style.css.map */
